# logalyzer

./: .gitignore  Cargo.toml  log4net.toml
src/: config.rs  db.rs  jelmql.pest  logalang.pest  logalang.rs  logalang_converter.rs  main.rs  parse.rs  system_report.rs  ui.rs
src/system_report/: server_config_sheet.rs
src/ui/: cheat_sheet.rs  columns.rs  filter.rs  log_file.rs  mod.rs
src/ui/logs/: filter.rs  mod.rs
