[package]
name = "logalyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.14.0"
chrono = "0.4.33"
crossterm = "0.27.0"
ratatui = "0.25.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
unicode-bom = "2.0.3"
pest = "2.6"
pest_derive = "2.6"
