[package]
name = "logalyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.14.0"
chrono = "0.4.33"
crossterm = "0.27.0"
ratatui = "0.25.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
unicode-bom = "2.0.3"
pest = "2.6"
pest_derive = "2.6"
tui-textarea = "0.4.0"
log = "0.4.20"
tui-logger = { version = "0.10.1", default-features = false, features = ["crossterm"] }
assert_matches = "1.5.0"
zip = "0.6.6"
anyhow = "1.0.79"
tui-scrollview = "0.2.1"
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = { version = "1.0.196", features = ["derive"] }
